// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SportsLanding component should match the snapshot when rendered after events load 1`] = `
Array [
  <div
    className="ContentHeader-content"
  >
    <h1
      className="title"
    >
      Football
       odds
      <button
        className="button-custom "
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-star fa-w-18 "
          data-icon="star"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </h1>
    <p
      className="description"
    >
      <span>
        Smarkets betting exchange allows you to bet with the best 
        <span>
          Football
        </span>
        odds - thanks to our small margins and industry-low 2% commission - on all tournaments and competitions
        <span>
           including Premier League, La Liga, Europa League and Champions League.
        </span>
      </span>
    </p>
  </div>,
  <ul
    className="EventInfoList-list-container"
  >
    <li
      className="EventInfo-tile tall"
    >
      <a
        href="/event-detail/1925896"
        onClick={[Function]}
      >
        <div
          className="link-overlay"
        />
      </a>
      <div
        className="info-container"
      >
        <div
          className="category-container"
        >
          <span
            className="category-text"
          >
            football
          </span>
          <span
            className="separator"
          >
            &gt;
          </span>
          <span
            className="category-text"
          >
            Championship
          </span>
        </div>
        <div
          className="info-title"
        >
          <div
            className="teams"
          >
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Millwall
              </span>
            </div>
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Bristol City
              </span>
            </div>
          </div>
        </div>
        <div
          className="event-date"
        >
          Start date: 
          30/04/2019 19:45
        </div>
      </div>
    </li>
    <li
      className="EventInfo-tile "
    >
      <a
        href="/event-detail/1934371"
        onClick={[Function]}
      >
        <div
          className="link-overlay"
        />
      </a>
      <div
        className="info-container"
      >
        <div
          className="category-container"
        >
          <span
            className="category-text"
          >
            football
          </span>
          <span
            className="separator"
          >
            &gt;
          </span>
          <span
            className="category-text"
          >
            Championship
          </span>
        </div>
        <div
          className="info-title"
        >
          <div
            className="teams"
          >
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Swansea City
              </span>
            </div>
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Derby County
              </span>
            </div>
          </div>
        </div>
        <div
          className="event-date"
        >
          Start date: 
          01/05/2019 19:45
        </div>
      </div>
    </li>
    <li
      className="EventInfo-tile "
    >
      <a
        href="/event-detail/1943310"
        onClick={[Function]}
      >
        <div
          className="link-overlay"
        />
      </a>
      <div
        className="info-container"
      >
        <div
          className="category-container"
        >
          <span
            className="category-text"
          >
            football
          </span>
          <span
            className="separator"
          >
            &gt;
          </span>
          <span
            className="category-text"
          >
            Champions League
          </span>
        </div>
        <div
          className="info-title"
        >
          <div
            className="teams"
          >
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Tottenham Hotspur
              </span>
            </div>
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Ajax
              </span>
            </div>
          </div>
        </div>
        <div
          className="event-date"
        >
          Start date: 
          30/04/2019 20:00
        </div>
      </div>
    </li>
    <li
      className="EventInfo-tile "
    >
      <a
        href="/event-detail/1943311"
        onClick={[Function]}
      >
        <div
          className="link-overlay"
        />
      </a>
      <div
        className="info-container"
      >
        <div
          className="category-container"
        >
          <span
            className="category-text"
          >
            football
          </span>
          <span
            className="separator"
          >
            &gt;
          </span>
          <span
            className="category-text"
          >
            Champions League
          </span>
        </div>
        <div
          className="info-title"
        >
          <div
            className="teams"
          >
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Barcelona
              </span>
            </div>
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Liverpool
              </span>
            </div>
          </div>
        </div>
        <div
          className="event-date"
        >
          Start date: 
          01/05/2019 20:00
        </div>
      </div>
    </li>
    <li
      className="EventInfo-tile "
    >
      <a
        href="/event-detail/1958062"
        onClick={[Function]}
      >
        <div
          className="link-overlay"
        />
      </a>
      <div
        className="info-container"
      >
        <div
          className="category-container"
        >
          <span
            className="category-text"
          >
            football
          </span>
          <span
            className="separator"
          >
            &gt;
          </span>
          <span
            className="category-text"
          >
            Premier League
          </span>
        </div>
        <div
          className="info-title"
        >
          <div
            className="teams"
          >
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Wolverhampton Wanderers
              </span>
            </div>
            <div
              className="team"
            >
              <span
                className="team-name"
              >
                Fulham
              </span>
            </div>
          </div>
        </div>
        <div
          className="event-date"
        >
          Start date: 
          04/05/2019 15:00
        </div>
      </div>
    </li>
  </ul>,
]
`;

exports[`SportsLanding component should match the snapshot when rendered before events load 1`] = `
Array [
  <div
    className="ContentHeader-content"
  >
    <h1
      className="title"
    >
      Football
       odds
      <button
        className="button-custom "
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-star fa-w-18 "
          data-icon="star"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </h1>
    <p
      className="description"
    >
      <span>
        Smarkets betting exchange allows you to bet with the best 
        <span>
          Football
        </span>
        odds - thanks to our small margins and industry-low 2% commission - on all tournaments and competitions
        <span>
           including Premier League, La Liga, Europa League and Champions League.
        </span>
      </span>
    </p>
  </div>,
  <div
    className="Spinner-container"
  >
    <span
      className="spinner-text"
    >
      Retrieving popular events
    </span>
    <div
      className="spinner"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>,
]
`;
